Begin work on Homepage
Added Divs for showcase and for log in area.

Also added desktop and mobile css files

--- a/index.html
+++ b/index.html
@@ -3,9 +3,35 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>[Social-Media]</title>
+    <link href="/styles/mobile.css" rel="stylesheet" type="text/css">
+    <link href="/styles/desktop.css" rel="stylesheet" media="only screen and (min-width : 720px)">
 </head>
 <body>
-    
+    <div id="main">
+        <header class="hpgHeader">
+            <form>
+                <input type="button" id="hpgBtnLog" name="hpgBtnLog">
+                <input type="button" id="hpgBtnReg" name="hpgBtnReg">
+            </form>
+        </header>
+        <div>
+            <div id="hpgShowcase">
+                <h1>Welcome to [Social-Media]</h1>
+            </div>
+            <div id="hpgLogIn">
+                <form>
+                    <h2>Username:</h2>
+                    <input type="text" placeholder="Username" id="hpgUser" name="hpgUser">
+                    <br>
+                    <h2>Password:</h2>
+                    <input type="password" placeholder="Password" id="hpgPass" name="hpgPass">
+                </form>
+            </div>
+        </div>
+        <footer class="hpgFooter">
+
+        </footer>
+    </div>
 </body>
 </html>
