--- a/index.html
+++ b/index.html
@@ -32,10 +32,11 @@
                 
             </div>
         </div>
-        <!-- <footer class="hpgFooter">
+        <footer class="hpgFooter">
             <div id="container">
+                <p class="ftrLnks"><a href="terms.html">Terms of use</a> &ensp; • &ensp; <a href="help.html">Help</a> &ensp; • &ensp; <a href="privpol.html">Privacy Policy</a></p>
             </div>
-        </footer> -->
+        </footer>
     </div>
 </body>
 </html>
