--- a/register.html
+++ b/register.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Log in page</title>
-    <link rel="stylesheet" href="login.css">
+    <link rel="stylesheet" href="register.css">
 </head>
 
 <body>
@@ -22,21 +22,25 @@
         <main>
             <div class="box1">
                 <p class="language">English ▼</p>
-                <h1>Log In to Your Account</h1>
+                <h1>Register</h1>
 
                 <div class="textbox">
-                    <input type="username" placeholder="E-Mail Address or Username">
+                    <input type="full name" placeholder="Full Name">
+                </div>
+                <div class="textbox">
+                    <input type="username" placeholder="E-Mail Address">
                 </div>
                 <div class="textbox">
                     <input type="password" placeholder="Password">
                 </div>
-                <div class="loggedin">
-                    <input type="checkbox" id="stayloggedin" name="" value="">
-                    <label for="stayloggedin"> Keep me logged in for 30 days<a href="">Forgot Password?</a></label><br>
-                </div>
-                <input class="btn" type="Button" value="Log In">
+                <input class="btn" type="Button" value="Register">
 
-                <p class="newaccount">Need an Account? <a href="register.html" class="signup">Sign Up</a></p>
+                <p class="existingaccount">Already Have An Account? <a href="login.html" class="signin">Sign In</a></p>
+
+                <p class="or"> ---- or ---- </p>
+
+                <input class="google" type="Button" value="Google" >
+                <input class="facebook" type="Button" value="Facebook">
             </div>
         </main>
     
