2 new pages and fixes
Created an e-mail reset link page
Created a password change page
created alert to inform e-mail link sent
created alert to confirm password reset successfully
corrected link paths

--- a/register.html
+++ b/register.html
@@ -33,7 +33,7 @@
                 <div class="textbox">
                     <input type="password" placeholder="Password">
                 </div>
-                <input class="btn" type="Button" value="Register">
+                <input class="btn" type="Button" value="Register" onclick="document.location='login.html'">
 
                 <p class="existingaccount">Already Have An Account? <a href="login.html" class="signin">Sign In</a></p>
 
