--- a/resetpassword.html
+++ b/resetpassword.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Log in page</title>
-    <link rel="stylesheet" href="login.css">
+    <link rel="stylesheet" href="resetpassword.css">
 </head>
 
 <body>
@@ -21,22 +21,22 @@
     
         <main>
             <div class="box1">
-                <p class="language">English ▼</p>
-                <h1>Log In to Your Account</h1>
+                <h1>Reset Password</h1>
 
                 <div class="textbox">
-                    <input type="username" placeholder="E-Mail Address or Username">
+                    <input type="username" placeholder="Enter New Password*">
                 </div>
                 <div class="textbox">
-                    <input type="password" placeholder="Password">
+                    <input type="password" placeholder="Confirm New Password*">
                 </div>
-                <div class="loggedin">
-                    <input type="checkbox" id="stayloggedin" name="" value="">
-                    <label for="stayloggedin"> Keep me logged in for 30 days<a href="forgotpassword.html" onclick="document.location='forgotpassword.html'">Forgot Password?</a></label><br>
-                </div>
-                <input class="btn" type="Button" value="Log In">
 
-                <p class="newaccount">Need an Account? <a href="register.html" class="signup">Sign Up</a></p>
+                <input class="btn" type="Button" value="Reset Password" onclick="myFunction()">
+                <script>
+                    function myFunction() {
+                      alert("Your Password Has Been Changed Successfully");
+                      window.location.href = "login.html";
+                    }
+                    </script>
             </div>
         </main>
     
