Mainpage getting there
main page hard bits have been coded, just now adding extra posts to make the page a little longer

--- a/login.html
+++ b/login.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="shortcut icon" href="images/favicon.png">
     <title>Log in page</title>
     <link rel="stylesheet" href="login.css">
 </head>
@@ -34,7 +35,7 @@
                     <input type="checkbox" id="stayloggedin" name="" value="">
                     <label for="stayloggedin"> Keep me logged in for 30 days<a href="forgotpassword.html" onclick="document.location='forgotpassword.html'">Forgot Password?</a></label><br>
                 </div>
-                <input class="btn" type="Button" value="Log In">
+                <input class="btn" type="Button" value="Log In" onclick="document.location='main.html'">
 
                 <p class="newaccount">Need an Account? <a href="register.html" class="signup">Sign Up</a></p>
             </div>
