Main page Finished
Main page has been finished with mobile and desktop css completed.

JavaScript added to help with the usability of the website and all webpages have been linked together.

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>[Social-Media]</title>
+    <title>Welcome</title>
     <link rel="shortcut icon" href="images/favicon.png">
     <link href="styles\mobile.css" rel="stylesheet">
     <link href="styles\desktop.css" rel="stylesheet" media="only screen and (min-width : 720px)">
