--- a/main.html
+++ b/main.html
@@ -36,19 +36,66 @@
                     <img src="images/pp.png" id="pp" alt="Profile Picture">
                     <h3>Fred Blogs</h3>
                     <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+                    <div class="pstInteract">
+                        <img src="images/like.png" alt="like">
+                        <span id="mainCount">12</span>
+                        <img src="images/comment.png" alt="comment">
+                        <span id="mainCount">4</span>
+                        <img src="images/share.png" alt="share">
+                        <span id="mainCount">1</span>
+                        <span id="dat">08/03/2021 - 15:48</span>
+                    </div>
                 </div>
                 <div id="post">
                     <img src="images/pp.png" id="pp" alt="Profile Picture">
                     <h3>Jessica Smith</h3>
-                    <p>Took this picture while on my walk with the dogs and thought that everyone should it! Happy Tuesday!</p>
+                    <p>Took this picture while on my walk with the dogs and thought that everyone should see it! Happy Tuesday!</p>
                     <img src="images/post_01.jpg" alt="Jessica Smith's Photo" class="attImg">
+                    <div class="pstInteract">
+                        <img src="images/like.png" alt="like">
+                        <span id="mainCount">5</span>
+                        <img src="images/comment.png" alt="comment">
+                        <span id="mainCount">1</span>
+                        <img src="images/share.png" alt="share">
+                        <span id="mainCount">0</span>
+                        <span id="dat">08/03/2021 - 10:15</span>
+                    </div>
                 </div>
                 <div id="post">
                     <img src="images/pp.png" id="pp" alt="Profile Picture">
                     <h3>David Looney</h3>
-                    <p>Found a little treasure while out and about on my birthday! </p>
-                    <img src="images/post_02.jpg" alt="David Looney's Photo" class="attImg">
+                    <p>Found a little treasure while out and about on my birthday! &#x1F389;&#x1F389;</p>
+                    <img src="images/post_02.jpg" alt="David Looney's Photo" class="attImg">                    
+                    <div class="pstInteract">
+                        <img src="images/like.png" alt="like">
+                        <span id="mainCount">54</span>
+                        <img src="images/comment.png" alt="comment">
+                        <span id="mainCount">18</span>
+                        <img src="images/share.png" alt="share">
+                        <span id="mainCount">4</span>
+                        <span id="dat">07/03/2021 - 20:58</span>
+                    </div>
                 </div>
+                <div id="post">
+                    <img src="images/pp.png" id="pp" alt="Profile Picture">
+                    <h3>Rosmary Williams</h3>
+                    <p>Been a busy day in the office! Looking Forward to going home!</p>
+                    <img src="images/post_03.jpg" alt="Rosemary Williams' Photo" class="attImg">                    
+                    <div class="pstInteract">
+                        <img src="images/like.png" alt="like">
+                        <span id="mainCount">32</span>
+                        <img src="images/comment.png" alt="comment">
+                        <span id="mainCount">31</span>
+                        <img src="images/share.png" alt="share">
+                        <span id="mainCount">0</span>
+                        <span id="dat">07/03/2021 - 14:34</span>
+                    </div>
+                </div>
+            </div>
+            <!-- popout image code from https://www.w3schools.com/howto/howto_css_modal_images.asp -->
+            <div id="mainPopout" class="popouts">
+                <span class="closeBtn">&times;</span>
+                <img class="popoutImg" id="modImg">
             </div>
         </section>
         <footer>
