--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <link rel="shortcut icon" href="images/favicon.png">
     <link href="styles\mobile.css" rel="stylesheet">
     <link href="styles\desktop.css" rel="stylesheet" media="only screen and (min-width : 720px)">
+    <script src="scripts/cssloader.js"></script>
 </head>
 <body>
     <div id="main">
@@ -32,6 +33,7 @@
         <footer class="hpgFooter">
             <div id="container">
                 <p class="ftrLnks"><a href="terms.html">Terms of use</a> &ensp; • &ensp; <a href="help.html">Help</a> &ensp; • &ensp; <a href="privpol.html">Privacy Policy</a></p>
+                <button onclick="loadCSS('styles/accessibility.css')">Enlarge text</button>
             </div>
         </footer>
     </div>
