--- a/index.html
+++ b/index.html
@@ -32,8 +32,7 @@
         </div>
         <footer class="hpgFooter">
             <div id="container">
-                <p class="ftrLnks"><a href="terms.html">Terms of use</a> &ensp; • &ensp; <a href="help.html">Help</a> &ensp; • &ensp; <a href="privpol.html">Privacy Policy</a></p>
-                <button onclick="loadCSS('styles/accessibility.css')">Enlarge text</button>
+                <p class="ftrLnks"><a href="terms.html">Terms of use</a> &ensp; • &ensp; <a href="help.html">Help</a> &ensp; • &ensp; <a href="privpol.html">Privacy Policy</a> &ensp; • &ensp; <a href="dummy.html" onclick="event.preventDefault();loadCSS('styles/accessibility.css')">Enlarge text</a></p>
             </div>
         </footer>
     </div>
