allow accessibility bits to be toggled & rename some files to better fit purpose

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <link rel="shortcut icon" href="images/favicon.png">
     <link href="styles\mobile.css" rel="stylesheet">
     <link href="styles\desktop.css" rel="stylesheet" media="only screen and (min-width : 720px)">
-    <script src="scripts/cssloader.js"></script>
+    <script src="scripts/accessibilityLoader.js"></script>
 </head>
 <body>
     <div id="main">
@@ -32,7 +32,7 @@
         </div>
         <footer class="hpgFooter">
             <div id="container">
-                <p class="ftrLnks"><a href="terms.html">Terms of use</a> &ensp; • &ensp; <a href="help.html">Help</a> &ensp; • &ensp; <a href="privpol.html">Privacy Policy</a> &ensp; • &ensp; <a href="dummy.html" onclick="event.preventDefault();loadCSS('styles/accessibility.css')">Enlarge text</a></p>
+                <p class="ftrLnks"><a href="terms.html">Terms of use</a> &ensp; • &ensp; <a href="help.html">Help</a> &ensp; • &ensp; <a href="privpol.html">Privacy Policy</a> &ensp; • &ensp; <a href="dummy.html" onclick="event.preventDefault();toggleAccessibilityType('enlargeText')">Enlarge text</a></p>
             </div>
         </footer>
     </div>
