--- a/login.html
+++ b/login.html
@@ -7,6 +7,7 @@
     <link rel="shortcut icon" href="images/favicon.png">
     <title>Log in page</title>
     <link rel="stylesheet" href="login.css">
+    <script src="scripts/accessibilityLoader.js"></script>
 </head>
 
 <body>
@@ -42,7 +43,7 @@
         </main>
     
         <footer>
-            <p class="info">Terms of use &ensp; • &ensp; Help &ensp; • &ensp; Privacy Policy</p>
+            <p class="info">Terms of use &ensp; • &ensp; Help &ensp; • &ensp; Privacy Policy &ensp; • &ensp; <a href="dummy.html" onclick="event.preventDefault();toggleAccessibilityType('enlargeText')">Enlarge text</a></p>
         </footer>
 
     </div>
