--- a/forgotpassword.html
+++ b/forgotpassword.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Log in page</title>
     <link rel="stylesheet" href="forgotpassword.css">
+    <script src="scripts/accessibilityLoader.js"></script>
 </head>
 
 <body>
@@ -38,7 +39,7 @@
         </main>
     
         <footer>
-            <p class="info">Terms of use &ensp; • &ensp; Help &ensp; • &ensp; Privacy Policy</p>
+            <p class="info">Terms of use &ensp; • &ensp; Help &ensp; • &ensp; Privacy Policy &ensp; • &ensp; <a href="dummy.html" onclick="event.preventDefault();toggleAccessibilityType('enlargeText')">Enlarge text</a></p>
         </footer>
 
     </div>
