style text enlarge to fill all pages

--- a/main.html
+++ b/main.html
@@ -30,7 +30,7 @@
                 <a href="settings.html">Settings</a>
                 <a href="index.html">Log Out <i class="fa">&#xf08b;</i></a>
                 <br>
-                <a href="dummy.html" onclick="event.preventDefault();toggleAccessibilityType('enlargeText')">Enlarge text</a>
+                <a href="dummy.html" id="enlarge-button" onclick="event.preventDefault();toggleAccessibilityType('enlargeText')">Enlarge text</a>
             </div>
         </section>
         <section class="mainContent">
