--- a/HomepageforWesbite.html
+++ b/HomepageforWesbite.html
@@ -52,7 +52,7 @@ li a:hover:not(.active) {
   <li><a href="">MarketPlace</a></li>
   <li><a href="">LogOut</a></li>
   <br>
-  <li> <a href="dummy.html" onclick="event.preventDefault();toggleAccessibilityType('enlargeText')">Enlarge text</a></li>
+  <li> <a href="dummy.html" id="enlarge-button" onclick="event.preventDefault();toggleAccessibilityType('enlargeText')">Enlarge text</a></li>
 </ul>
 
 <div style="margin-left:25%;padding:1px 16px;height:1000px;">
