--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
         </div>
         <footer class="hpgFooter">
             <div id="container">
-                <p class="ftrLnks"><a href="terms.html">Terms of use</a> &ensp; • &ensp; <a href="help.html">Help</a> &ensp; • &ensp; <a href="privpol.html">Privacy Policy</a> &ensp; • &ensp; <a href="dummy.html" onclick="event.preventDefault();toggleAccessibilityType('enlargeText')">Enlarge text</a></p>
+                <p class="ftrLnks"><a href="terms.html">Terms of use</a> &ensp; • &ensp; <a href="help.html">Help</a> &ensp; • &ensp; <a href="privpol.html">Privacy Policy</a> &ensp; • &ensp; <a href="dummy.html" id="enlarge-button" onclick="event.preventDefault();toggleAccessibilityType('enlargeText')">Enlarge text</a></p>
             </div>
         </footer>
     </div>
