--- a/login.html
+++ b/login.html
@@ -43,7 +43,7 @@
         </main>
     
         <footer>
-            <p class="info">Terms of use &ensp; • &ensp; Help &ensp; • &ensp; Privacy Policy &ensp; • &ensp; <a href="dummy.html" onclick="event.preventDefault();toggleAccessibilityType('enlargeText')">Enlarge text</a></p>
+            <p class="info">Terms of use &ensp; • &ensp; Help &ensp; • &ensp; Privacy Policy &ensp; • &ensp; <a href="dummy.html" id="enlarge-button" onclick="event.preventDefault();toggleAccessibilityType('enlargeText')">Enlarge text</a></p>
         </footer>
 
     </div>
