fixed space in  keep me signed in
some reason the keep signed in and forgot password had no spaces - fixed it

--- a/login.html
+++ b/login.html
@@ -34,7 +34,7 @@
                 </div>
                 <div class="loggedin">
                     <input type="checkbox" id="stayloggedin" name="" value="">
-                    <label for="stayloggedin"> Keep me logged in for 30 days<a href="forgotpassword.html" onclick="document.location='forgotpassword.html'">Forgot Password?</a></label><br>
+                    <label for="stayloggedin"> Keep me logged in for 30 days &emsp; <a href="forgotpassword.html" onclick="document.location='forgotpassword.html'">Forgot Password?</a></label><br>
                 </div>
                 <input class="btn" type="Button" value="Log In" onclick="document.location='main.html'">
 
