--- a/login.html
+++ b/login.html
@@ -36,7 +36,7 @@
                     <input type="checkbox" id="stayloggedin" name="" value="">
                     <label for="stayloggedin"> Keep me logged in for 30 days &emsp; <a href="forgotpassword.html" onclick="document.location='forgotpassword.html'">Forgot Password?</a></label><br>
                 </div>
-                <input class="btn" type="Button" value="Log In" onclick="document.location='main.html'">
+                <input class="btn" type="Button" value="Log In" onclick="document.location='main_en.html'">
 
                 <p class="newaccount">Need an Account? <a href="register.html" class="signup">Sign Up</a></p>
             </div>
