Language menu updated

--- a/main_de.html
+++ b/main_de.html
@@ -36,10 +36,10 @@
                         Deutsche
                     </div>
                     <ul>
-                        <li><a href="main_en.html" class="en">Englisch</a> </li>
+                        <li><a href="main_en.html" class="en">English</a> </li>
                         <li><a href="main_de.html" class="de">Deutsche</a> </li>
-                        <li><a href="main_fr.html" class="fr">Französisch</a> </li>
-                        <li><a href="main_es.html" class="es">Spanisch</a> </li>
+                        <li><a href="main_fr.html" class="fr">Français</a> </li>
+                        <li><a href="main_es.html" class="es">Español</a> </li>
                     </ul>
                 </div>
             </div>
