--- a/main_en.html
+++ b/main_en.html
@@ -37,9 +37,9 @@
                     </div>
                     <ul>
                         <li><a href="main_en.html" class="en">English</a> </li>
-                        <li><a href="main_de.html" class="de">German</a> </li>
-                        <li><a href="main_fr.html" class="fr">French</a> </li>
-                        <li><a href="main_es.html" class="es">Spanish</a> </li>
+                        <li><a href="main_de.html" class="de">Deutsche</a> </li>
+                        <li><a href="main_fr.html" class="fr">Français</a> </li>
+                        <li><a href="main_es.html" class="es">Español</a> </li>
                     </ul>
                 </div>
             </div>
