--- a/main_fr.html
+++ b/main_fr.html
@@ -36,10 +36,10 @@
                         Français
                     </div>
                     <ul>
-                        <li><a href="main_en.html" class="en">Anglais</a> </li>
-                        <li><a href="main_de.html" class="de">Allemand</a> </li>
+                        <li><a href="main_en.html" class="en">English</a> </li>
+                        <li><a href="main_de.html" class="de">Deutsche</a> </li>
                         <li><a href="main_fr.html" class="fr">Français</a> </li>
-                        <li><a href="main_es.html" class="es">Espagnol</a> </li>
+                        <li><a href="main_es.html" class="es">Español</a> </li>
                     </ul>
                 </div>
             </div>
