--- a/main_es.html
+++ b/main_es.html
@@ -36,9 +36,9 @@
                         Español
                     </div>
                     <ul>
-                        <li><a href="main_en.html" class="en">Inglésa</a> </li>
-                        <li><a href="main_de.html" class="de">Alemán</a> </li>
-                        <li><a href="main_fr.html" class="fr">Francesa</a> </li>
+                        <li><a href="main_en.html" class="en">English</a> </li>
+                        <li><a href="main_de.html" class="de">Deutsche</a> </li>
+                        <li><a href="main_fr.html" class="fr">Français</a> </li>
                         <li><a href="main_es.html" class="es">Español</a> </li>
                     </ul>
                 </div>
