--- a/main_es.html
+++ b/main_es.html
@@ -26,7 +26,7 @@
                 <a href="javascript:void(0)" class="closebtn()" onclick="closeNav()">&times;</a>
                 <a href="main_es.html">Página Principal</a>
                 <a href="freinds.html">Amigos</a>
-                <a href="groups.html">Grupos</a>
+                <a href="groupjoin.html">Grupos</a>
                 <a href="settings.html">Ajustes</a>
                 <a href="index.html">Cerrar sesión <i class="fa">&#xf08b;</i></a>
                 <br>
