--- a/main_fr.html
+++ b/main_fr.html
@@ -26,7 +26,7 @@
                 <a href="javascript:void(0)" class="closebtn()" onclick="closeNav()">&times;</a>
                 <a href="main.html">Accueil</a>
                 <a href="freinds.html">Amis</a>
-                <a href="groups.html">Groupes</a>
+                <a href="groupjoin.html">Groupes</a>
                 <a href="settings.html">Réglages</a>
                 <a href="index.html">Se déconnecter <i class="fa">&#xf08b;</i></a>
                 <br>
