fix friends typo in nav

--- a/main_de.html
+++ b/main_de.html
@@ -25,7 +25,7 @@
             <div class="sidenav" id="mainNav">
                 <a href="javascript:void(0)" class="closebtn()" onclick="closeNav()">&times;</a>
                 <a href="main_en.html">Startseite</a>
-                <a href="freinds.html">Freundschaft</a>
+                <a href="friends.html">Freundschaft</a>
                 <a href="groups.html">Gruppen</a>
                 <a href="settings.html">die Einstellungen</a>
                 <a href="index.html">Ausloggen <i class="fa">&#xf08b;</i></a>
