--- a/main_es.html
+++ b/main_es.html
@@ -25,7 +25,7 @@
             <div class="sidenav" id="mainNav">
                 <a href="javascript:void(0)" class="closebtn()" onclick="closeNav()">&times;</a>
                 <a href="main_es.html">Página Principal</a>
-                <a href="freinds.html">Amigos</a>
+                <a href="friends.html">Amigos</a>
                 <a href="groupjoin.html">Grupos</a>
                 <a href="settings.html">Ajustes</a>
                 <a href="index.html">Cerrar sesión <i class="fa">&#xf08b;</i></a>
