--- a/main_fr.html
+++ b/main_fr.html
@@ -25,7 +25,7 @@
             <div class="sidenav" id="mainNav">
                 <a href="javascript:void(0)" class="closebtn()" onclick="closeNav()">&times;</a>
                 <a href="main.html">Accueil</a>
-                <a href="freinds.html">Amis</a>
+                <a href="friends.html">Amis</a>
                 <a href="groupjoin.html">Groupes</a>
                 <a href="settings.html">Réglages</a>
                 <a href="index.html">Se déconnecter <i class="fa">&#xf08b;</i></a>
