--- a/friends.html
+++ b/friends.html
@@ -27,7 +27,7 @@
                 <a href="javascript:void(0)" class="closebtn()" onclick="closeNav()">&times;</a>
                 <a href="main_en.html">Home</a>
                 <a href="friends.html">Friends</a>
-                <a href="groups.html">Groups</a>
+                <a href="groupjoin.html">Groups</a>
                 <a href="settings.html">Settings</a>
                 <a href="index.html">Log Out <i class="fa">&#xf08b;</i></a>
                 <br>
